# spotify-slackbot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: package.on-dispatch.yml  pythonpackage.yml
spotify_slackbot/: __init__.py  helpers.py  main.py  spotify_slackbot.py
tests/: __init__.py  test_spotify_slackbot.py
